--- a/main.css
+++ b/main.css
@@ -81,7 +81,7 @@ footer{
     /* text-align: justify; */
     margin-bottom: 0px;
 }
-@media screen and (max-width: 576px){
+@media screen and (max-width: 500px){
     .parrafoContenido{
         font-size: 12px;
     }
@@ -91,7 +91,12 @@ footer{
     .iframeParrafoContenido{
         min-height: 450px;
     }
-}
+} 
+/* @media screen and (max-width: 1024px){
+    .iframeParrafoContenido{
+        min-height: 200px;
+    }
+} */
 .divformContenido{   
     border: solid 1px;
     margin-top: 0px;
@@ -111,6 +116,19 @@ footer{
 }
 .iframeParrafoContenido{
     color: #fcf304;
-    /* min-height: 450px; */
+    height: 100%;
     text-align: justify;
 }
+/* .embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+}
+.embed-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+} */
